@@ -7,7 +7,9 @@
   <column value="getStart_time" />
   <column value="get_end_time" />
   <column value="getAdvisory_date" />
+  <column value="getInvited_groups" />
   <column value="getAssigned_groups" />
   <column value="getResponsible_group" />
   <column value="getProject_number" />
+  <column value="project_numbers" />
 </object>
